# wkhtmltopdf

./: .back-to-roots-state.json  .gitignore  .revival-state.json  .wreck-it.toml  CHANGELOG.md  Cargo.toml  HEADLESS_CHROME_AUDIT.md  IMPLEMENTATION.md  README.md  RELEASE_NOTES.md  SECURITY.md  back-to-roots-tasks.json  flake.nix  revival-tasks.json
.github/workflows/: docs.yml  official.yml  ralph.yml  release.yml  visual-regression.yml
.wreck-it/: config.toml
action/: Dockerfile  action.yml  entrypoint.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/include/: webkit_render.h
crates/core/include/wkhtmltopdf/: webkit_renderer.h
crates/core/src/: chrome.rs  lib.rs  qt_webkit.rs  renderer.rs  webkit.rs  webkit_render_linux.c  webkit_render_macos.m  webkit_renderer.cpp
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs  pdf_diff.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs
crates/pdf/: Cargo.toml
crates/pdf/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/fixtures/: edge_cases.html  flexbox.html  grid.html  header_footer.html  headings.html  images.html  javascript.html  multi_page.html  page_breaks.html  print_media.html  simple.html  styled.html  tables.html  toc.html  unicode_rtl.html
crates/tests/src/: lib.rs
crates/tests/tests/: bench.rs  integration.rs  regression.rs  visual_regression.rs
docs/: BENCHMARK_RESULTS.md  architecture.md  downloads.md  migration.md  qt-rust-webkit-research.md  rust-ecosystem.md  ubuntu-25-dependencies.md
