[package]
name = "wkhtmltopdf-cli"
version = "0.13.0"
edition = "2021"
rust-version = "1.80"
description = "Command-line interface for wkhtmltopdf"

[[bin]]
name = "wkhtmltopdf"
path = "src/main.rs"

[[bin]]
name = "wkhtmltoimage"
path = "src/bin/wkhtmltoimage.rs"

[dependencies]
wkhtmltopdf-core = { path = "../core" }
wkhtmltopdf-pdf = { path = "../pdf" }
wkhtmltopdf-image = { path = "../image" }
wkhtmltopdf-settings = { path = "../settings" }
clap = { version = "4", features = ["derive"] }
