[package]
name = "wkhtmltopdf-image"
version = "0.1.0"
edition = "2021"
description = "Image output for wkhtmltopdf"

[dependencies]
wkhtmltopdf-core = { path = "../core" }
wkhtmltopdf-settings = { path = "../settings" }
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
