[package]
name = "wkhtmltopdf-image"
version = "0.13.0"
edition = "2021"
rust-version = "1.80"
description = "Image output for wkhtmltopdf"

[dependencies]
wkhtmltopdf-core = { path = "../core" }
wkhtmltopdf-settings = { path = "../settings" }
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
