[package]
name = "wkhtmltopdf-pdf"
version = "0.13.0"
edition = "2021"
rust-version = "1.80"
description = "PDF output for wkhtmltopdf"
license = "LGPL-3.0"

[dependencies]
wkhtmltopdf-core = { path = "../core" }
wkhtmltopdf-settings = { path = "../settings" }
thiserror = "2"
printpdf = "0.9.1"
lopdf = "0.39.0"
ureq = "3.2.0"
base64 = "0.22"
