[package]
name = "wkhtmltopdf-tests"
version = "0.1.0"
edition = "2021"
description = "Integration and regression tests for wkhtmltopdf"

[dependencies]
wkhtmltopdf-core = { path = "../core" }
wkhtmltopdf-pdf = { path = "../pdf" }
wkhtmltopdf-image = { path = "../image" }
wkhtmltopdf-settings = { path = "../settings" }
serde_json = "1"
tempfile = "3.26.0"
