[package]
name = "wkhtmltopdf-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Integration and regression tests for wkhtmltopdf"

[dependencies]
wkhtmltopdf-core = { path = "../core" }
wkhtmltopdf-pdf = { path = "../pdf" }
wkhtmltopdf-image = { path = "../image" }
wkhtmltopdf-diff = { path = "../diff" }
wkhtmltopdf-settings = { path = "../settings" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
serde_json = "1"
tempfile = "3.26.0"
